ContentProvider cambia sus parametros de URL a URI para ir facilitando el cumplimiento de JAVA-0003: https://wiki.zauber.com.ar/intra/bin/view/Tecnologia/LineamientosDeCodificacionDisenoArquitectura#JAVA003_java_net_URL
(potenciales problemas de URL en hashcodes y mapas)