@@ -3,8 +3,8 @@
  */
 package ar.com.zauber.commons.web.rest.impl;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -24,22 +24,22 @@ import ar.com.zauber.commons.web.rest.ContentProvider;
 public class FixedContentProviderTest {
     private final ContentProvider contentProvider;
     
-    /** Creates the FixedContentProviderTest.  */
-    public FixedContentProviderTest() throws MalformedURLException {
-        final Map<URL, String> map = new HashMap<URL, String>();
-        map.put(new URL("http://foo"), "ar/com/zauber/commons/web/rest/impl/foo.txt");
-        map.put(new URL("http://bar"), "bar.txt");
+    /** Creates the FixedContentProviderTest. */
+    public FixedContentProviderTest() throws URISyntaxException {
+        final Map<URI, String> map = new HashMap<URI, String>();
+        map.put(new URI("http://foo"), "ar/com/zauber/commons/web/rest/impl/foo.txt");
+        map.put(new URI("http://bar"), "bar.txt");
         contentProvider = new FixedContentProvider(map);
     }
     
     @Test
-    public void testFound() throws NoSuchEntityException, MalformedURLException {
-        Assert.assertNotNull(contentProvider.getContent(new URL("http://foo")));
+    public void testFound() throws URISyntaxException  {
+        Assert.assertNotNull(contentProvider.getContent(new URI("http://foo")));
     }
     
     @Test
-    public void testNotFound() throws MalformedURLException {
-        final URL url = new URL("http://bar");
+    public void testNotFound() throws URISyntaxException {
+        final URI url = new URI("http://bar");
         try {
             contentProvider.getContent(url);
             Assert.fail();
